# ffmpeg-cpp-example

./: CMakeLists.txt  README.md  dummy_source_encoding.cpp  ffmpeg_remuxer.c  invert_colors.cpp
